(library
    (name arkanoid)
    (modules
        Ball
        Brick
        Canvas
        Collision
        Color
        Constants
        Context
        Events
        Game_state
        Graphics
        Level_state
        Log
        Maths
        Message_box
        Paddle
        Physics
        Player_state
        Rectangle
        Time
        Wall)
    (libraries base tsdl)
)
