(library
    (name arkanoid)
    (modules
        Ball
        Brick
        Canvas
        Collision
        Color
        Constants
        Context
        Events
        Font
        Game_state
        Graphics
        Level_state
        Log
        Maths
        Message_box
        Paddle
        Physics
        Player_state
        Rectangle
        Text
        Time
        Wall)
    (libraries base tsdl tsdl-ttf)
)
