(library
    (name arkanoid)
    (modules
        Ball
        Brick
        Canvas
        Collision
        Color
        Constants
        Context
        Events
        Font
        Game_state
        Graphics
        Image
        Intro
        Level_state
        Log
        Maths
        Message_box
        Mixer
        Music
        Paddle
        Physics
        Player_state
        Rectangle
        Text
        Time
        Wall)
    (libraries base tsdl tsdl-image tsdl-mixer tsdl-ttf)
)
